Enhance member and trainer functionalities with notification management and database path resolution
- Updated member registration with seeded sample data.
- Improved notification handling by adding read state persistence.
- Integrated trainer schedule service into member dashboard and training sessions.
- Added delete functionality for trainers with confirmation dialog.
- Refactored notification repository to support marking notifications as read.
- Enhanced database connection to resolve database path dynamically.